added computer and player display

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
   <h1>Rock Paper Scissors</h1>
 
-  <h2 id="your_pick"></h2>
-  <h3 id="computer_pick"></h3>
+  <h3>You throw:</h3><h3 id="your_pick"></h3>
+  
+  <h3>Computer Overlord Throws:</h3><h3 id="computer_pick"></h3>
 
   <img id="result">
+  <h3 id="result_text"></h3>
 
+  <input type="button" value="Reload Page" onClick="window.location.href=window.location.href">
 
 </body>
 
