--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
   
   <h3>Computer Overlord Throws:</h3><h3 id="computer_pick"></h3>
 
+  <br>
+
   <img id="result">
   <h3 id="result_text"></h3>
 
-  <input type="button" value="Reload Page" onClick="window.location.href=window.location.href">
+  <button id="try_again" onClick="window.location.href=window.location.href">THROW AGAIN</button>
 
 </body>
 
