--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <img id="result">
   <h3 id="result_text"></h3>
 
-  <button id="try_again" onClick="window.location.href=window.location.href">THROW AGAIN</button>
+  <button id="hidden" onClick="window.location.href=window.location.href">THROW AGAIN</button>
 
 </body>
 
