--- a/index.html
+++ b/index.html
@@ -7,18 +7,31 @@
 </head>
 
 <body>
-  <h1>Rock Paper Scissors</h1>
+  <h1 class="left">Rock Paper Scissors</h1>
 
-  <h3>You throw:</h3><h3 id="your_pick"></h3>
+  <button id="hidden" onClick="window.location.href=window.location.href">THROW AGAIN</button>
+
+  <div class="clear"></div>
+
+  <div class="left">
+  <h3>You throw:</h3>
+  <h3 id="your_pick"></h3>
+  <img id="your_picture">
+  </div>
   
-  <h3>Computer Overlord Throws:</h3><h3 id="computer_pick"></h3>
+  <div class="right">
+  <h3>Your Computer Overlord Throws:</h3>
+  <h3 id="computer_pick"></h3>
+  <img id="computer_picture">
+</div>
 
   <br>
+
+  <div class="clear"></div>
 
   <img id="result">
   <h3 id="result_text"></h3>
 
-  <button id="hidden" onClick="window.location.href=window.location.href">THROW AGAIN</button>
 
 </body>
 
