--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
 
   <div class="clear"></div>
 
+  <div class="inner_body">
+
   <div class="left">
-  <h3>You throw:</h3>
+  <h3><strong>You Throw:<strong></h3>
   <h3 id="your_pick"></h3>
   <img id="your_picture">
   </div>
   
-  <div class="right">
-  <h3>Your Computer Overlord Throws:</h3>
+  <div class="right text_right">
+  <h3><strong>Your Computer Overlord Throws:</strong></h3>
   <h3 id="computer_pick"></h3>
   <img id="computer_picture">
 </div>
@@ -32,6 +34,7 @@
   <img id="result">
   <h3 id="result_text"></h3>
 
+  <div>
 
 </body>
 
