--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1 class="left">Rock Paper Scissors</h1>
+  <h1 class="left">Rock Paper Scissors!</h1>
 
   <button id="hidden" onClick="window.location.href=window.location.href">THROW AGAIN</button>
 
