--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
   <img id="result">
   <h3 id="result_text"></h3>
 
+  <div class="counter">
+    <h4>Player:</h4>
+    <h4 id="player_score"></h4>
+    <h4>Computer:</h4>
+    <h4 id="computer_score"></h4>
+  </div>
+
   <div>
 
 </body>
